// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddRecipient should render 1`] = `
<div>
  <div
    class="sc-fzqBZW fdSwjK"
  >
    <div
      class="text-theme-neutral-dark hover:text-theme-primary"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal text-md transition-colors duration-100"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer bg-theme-primary-100 text-theme-primary-500"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="sc-AxjAm ddQVWI flex-1"
          color="primary"
          data-testid="add-recipient-is-single-toggle"
          type="button"
        >
          Single
        </button>
        <button
          class="sc-AxjAm ddJBbC flex-1 border-l-0"
          color="primary"
          data-testid="add-recipient-is-multiple-toggle"
          type="button"
        >
          Multiple
        </button>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 gIKSHW mt-8 mb-2"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="sc-AxirZ izhStr relative mt-1"
        >
          <div
            class="mb-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
              data-testid="FormLabel"
              for="recipientAddress"
              label="Recipient"
              required=""
            >
              Recipient
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
          </div>
          <div>
            <div
              class="relative flex items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="absolute left-1"
              >
                <div
                  class="sc-fzpans zJElq mx-3 bg-theme-neutral-200 border-theme-neutral-200"
                />
              </div>
              <input
                class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-14 pr-11"
                data-testid="SelectRecipient__input"
                name="recipientAddress"
                type="text"
                value=""
              />
              <div
                class="absolute flex items-center cursor-pointer right-4 space-x-3"
                data-testid="SelectRecipient__select-contact"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="sc-AxirZ izhStr relative mt-1"
        >
          <div
            class="mb-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
              data-testid="FormLabel"
              for="amount"
              label="Amount"
              required=""
            >
              Amount
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
          </div>
          <div
            class="sc-Axmtr jzhOwR"
          >
            <input
              class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
              data-testid="add-recipient__amount-input"
              name="amount"
              placeholder="Amount"
              type="number"
            />
            <div
              class="sc-AxhUy sc-AxheI bYHtKZ"
            >
              <button
                class="h-12 pl-6 pr-3 mr-1 bg-white text-theme-primary focus:outline-none"
                data-testid="add-recipient__send-all"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render with multiple recipients tab 1`] = `
<div>
  <div
    class="sc-fzqBZW fdSwjK"
  >
    <div
      class="text-theme-neutral-dark hover:text-theme-primary"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal text-md transition-colors duration-100"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer bg-theme-primary-100 text-theme-primary-500"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="sc-AxjAm ddJBbC flex-1"
          color="primary"
          data-testid="add-recipient-is-single-toggle"
          type="button"
        >
          Single
        </button>
        <button
          class="sc-AxjAm ddQVWI flex-1 border-l-0"
          color="primary"
          data-testid="add-recipient-is-multiple-toggle"
          type="button"
        >
          Multiple
        </button>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 jZidsI mt-8 mb-2"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="sc-AxirZ izhStr relative mt-1"
        >
          <div
            class="mb-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
              data-testid="FormLabel"
              for="recipientAddress"
              label="Recipient #1"
              required=""
            >
              Recipient #1
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
          </div>
          <div>
            <div
              class="relative flex items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="absolute left-1"
              >
                <div
                  class="sc-fzpans zJElq mx-3 bg-theme-neutral-200 border-theme-neutral-200"
                />
              </div>
              <input
                class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-14 pr-11"
                data-testid="SelectRecipient__input"
                name="recipientAddress"
                type="text"
                value=""
              />
              <div
                class="absolute flex items-center cursor-pointer right-4 space-x-3"
                data-testid="SelectRecipient__select-contact"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="sc-AxirZ izhStr relative mt-1"
        >
          <div
            class="mb-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
              data-testid="FormLabel"
              for="amount"
              label="Amount"
              required=""
            >
              Amount
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
          </div>
          <div
            class="sc-Axmtr jzhOwR"
          >
            <input
              class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
              data-testid="add-recipient__amount-input"
              name="amount"
              placeholder="Amount"
              type="number"
            />
            <div
              class="sc-AxhUy sc-AxheI bYHtKZ"
            >
              <button
                class="h-12 pl-6 pr-3 mr-1 bg-white text-theme-primary focus:outline-none"
                data-testid="add-recipient__send-all"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render without recipients 1`] = `
<div>
  <div
    class="sc-fzqBZW fdSwjK"
  >
    <div
      class="text-theme-neutral-dark hover:text-theme-primary"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal text-md transition-colors duration-100"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer bg-theme-primary-100 text-theme-primary-500"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="sc-AxjAm ddQVWI flex-1"
          color="primary"
          data-testid="add-recipient-is-single-toggle"
          type="button"
        >
          Single
        </button>
        <button
          class="sc-AxjAm ddJBbC flex-1 border-l-0"
          color="primary"
          data-testid="add-recipient-is-multiple-toggle"
          type="button"
        >
          Multiple
        </button>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 gIKSHW mt-8 mb-2"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="sc-AxirZ izhStr relative mt-1"
        >
          <div
            class="mb-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
              data-testid="FormLabel"
              for="recipientAddress"
              label="Recipient"
              required=""
            >
              Recipient
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
          </div>
          <div>
            <div
              class="relative flex items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="absolute left-1"
              >
                <div
                  class="sc-fzpans zJElq mx-3 bg-theme-neutral-200 border-theme-neutral-200"
                />
              </div>
              <input
                class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-14 pr-11"
                data-testid="SelectRecipient__input"
                name="recipientAddress"
                type="text"
                value=""
              />
              <div
                class="absolute flex items-center cursor-pointer right-4 space-x-3"
                data-testid="SelectRecipient__select-contact"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="sc-AxirZ izhStr relative mt-1"
        >
          <div
            class="mb-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
              data-testid="FormLabel"
              for="amount"
              label="Amount"
              required=""
            >
              Amount
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
          </div>
          <div
            class="sc-Axmtr jzhOwR"
          >
            <input
              class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
              data-testid="add-recipient__amount-input"
              name="amount"
              placeholder="Amount"
              type="number"
            />
            <div
              class="sc-AxhUy sc-AxheI bYHtKZ"
            >
              <button
                class="h-12 pl-6 pr-3 mr-1 bg-white text-theme-primary focus:outline-none"
                data-testid="add-recipient__send-all"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should set available amount 1`] = `
<div>
  <div
    class="sc-fzqBZW fdSwjK"
  >
    <div
      class="text-theme-neutral-dark hover:text-theme-primary"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal text-md transition-colors duration-100"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer bg-theme-primary-100 text-theme-primary-500"
          >
            <div
              class="sc-AxiKw dklFyP"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="sc-AxjAm ddQVWI flex-1"
          color="primary"
          data-testid="add-recipient-is-single-toggle"
          type="button"
        >
          Single
        </button>
        <button
          class="sc-AxjAm ddJBbC flex-1 border-l-0"
          color="primary"
          data-testid="add-recipient-is-multiple-toggle"
          type="button"
        >
          Multiple
        </button>
      </div>
    </div>
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 gIKSHW mt-8 mb-2"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="sc-AxirZ izhStr relative mt-1"
        >
          <div
            class="mb-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
              data-testid="FormLabel"
              for="recipientAddress"
              label="Recipient"
              required=""
            >
              Recipient
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
          </div>
          <div>
            <div
              class="relative flex items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="absolute left-1"
              >
                <div
                  class="sc-fzpans zJElq mx-3 bg-theme-neutral-200 border-theme-neutral-200"
                />
              </div>
              <input
                class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-14 pr-11"
                data-testid="SelectRecipient__input"
                name="recipientAddress"
                type="text"
                value=""
              />
              <div
                class="absolute flex items-center cursor-pointer right-4 space-x-3"
                data-testid="SelectRecipient__select-contact"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="sc-AxirZ izhStr relative mt-1"
        >
          <div
            class="mb-2"
          >
            <label
              class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
              data-testid="FormLabel"
              for="amount"
              label="Amount"
              required=""
            >
              Amount
              <div
                class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
          </div>
          <div
            class="sc-Axmtr jzhOwR"
          >
            <input
              class="sc-AxhCb biYFdn overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
              data-testid="add-recipient__amount-input"
              name="amount"
              placeholder="Amount"
              type="number"
            />
            <div
              class="sc-AxhUy sc-AxheI bYHtKZ"
            >
              <button
                class="h-12 pl-6 pr-3 mr-1 bg-white text-theme-primary focus:outline-none"
                data-testid="add-recipient__send-all"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;
